Começando a desenvolver o site

--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
         </nav>
     </header>
     <main>
-        <h2 class="h2-top">Afinal, qual o intuito da Lata Velha?</h2>
-        <div class="text">
-            <p class="text-one">O intuito do site é informar os consumidores e apaixonados por carros as últimas novidades sobre carros populares, e também sobre o aumento de preço que os veículos sofreram durante a pandemia e como isso impactou no mercado automobilístico, também vamos informar os valores de veículos mais em contas dos mercados usados e 0 km!  </p>
+        <section class="about">
+            <h2 class="h2-top">Afinal, qual o intuito do Lata Velha?</h2>
+            <div class="text">
+                <p class="text-one">O intuito do site é informar os consumidores e apaixonados por carros as últimas novidades sobre carros populares, e também sobre o aumento de preço que os veículos sofreram durante a pandemia e como isso impactou no mercado automobilístico, também vamos informar os valores de veículos mais em contas dos mercados usados e 0 km.</p>
+                <img class="cars"src="./fotos/carros-locaçao.png" alt="carros populares">
         </div>
+        </section>
+        <div class="impact">
+            <h2 class="h2-impact">Impacto da Pandemia sobre valores</h2>
+            <p class="p-impact">Com a escassez de semicondutores, causada pela pandemia de Covid-19, a produção diminuiu e não atende à demanda. Quando a cadeia de produção e distribuição de automóveis funcionava como uma engrenagem perfeitamente lubrificada, antes da pandemia de Covid-19, os consumidores podiam escolher a marca e o modelo que quisessem. Agora, quando há uma inédita escassez de veículos a nível mundial, os compradores estão colocando seus nomes em listas de espera e podem ter de aguardar meses até que possam adquirir seus carros. Essa escassez provocou um aumento de preços de alguns modelos de carros novos e um salto nos preços dos usados. As grandes fabricantes estão produzindo menos automóveis porque não existem semicondutores suficientes no mercado, uma peça essencial em sua produção. A isso se soma uma grande demanda por chips por parte de empresas de tecnologia, que fabricam de eletrodomésticos, computadores e telefones celulares até consoles de videogames. "A indústria de semicondutores está tentando ficar em dia com a demanda, mas simplesmente não consegue", diz Susan Golicic, professora da Faculdade de Negócios da Universidade Estatal do Colorado, nos Estados Unidos. Diante da falta de chips, os fabricantes de veículos tiveram que selecionar quais modelos seguem na linha de produção e quais ficam de fora, explica a especialista.</p>
+        </div>
+        <section class="top10">
+            <h2 class="h2-top10">Os 10 carros mais baratos no Brasil:</h2>
+            <div class="cont-kwid">
+                <div class="gray">
+                    <img class="kwid" src="./fotos/kisspng-renault-kwid-car-dacia-duster-renault-kwid-rxt-5b2417f9807517.6985113815290920895262-removebg-preview.png" alt="renault kwid">
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
