Fiz o primeiro carro

--- a/index.html
+++ b/index.html
@@ -33,9 +33,20 @@
         <section class="top10">
             <h2 class="h2-top10">Os 10 carros mais baratos no Brasil:</h2>
             <div class="cont-kwid">
-                <div class="gray">
                     <img class="kwid" src="./fotos/kisspng-renault-kwid-car-dacia-duster-renault-kwid-rxt-5b2417f9807517.6985113815290920895262-removebg-preview.png" alt="renault kwid">
-                </div>
+                    <h2 class="kwid-h2">1° - Renault Kwid</h2>
+                    <p class="kwid-p">O novo Renault Kwid chegou totalmente renovado. E ainda mais SUV. Por fora, nova grade frontal, lanternas com assinatura em LED, rodas de liga leve diamantadas 14” e novo teto Biton – muito mais ousado e imponente. Por dentro, totalmente renovado com novo acabamento, painel de instrumentos com mostradores em LED, MEDIA Evolution de 8” com botão Push to Talk e muito espaço e conforto. A bordo do SUV dos compactos, todo dia vai ser grande.</p>
+                    <div class="specify">
+                        <button class="specify-btn">Especificações ⇓</button>
+                        <ul class="kwid-list">
+                            <li><strong>Preço sugerido:</strong> A partir de R$ 48.790</li>
+                            <li><strong>Dimensões:</strong>3.680 mm C x 1.579 mm L x 1.474-1.479 mm A</li>
+                            <li><strong>Tanque de Combustível:</strong>40 L</li>
+                            <li><strong>Volume de Carga:</strong>Básica: 290 l / Bancos rebatidos: 1.100 l</li>
+                            <li><strong>Potência:</strong>70 - 71 HP</li>
+                            <li><strong>Peso:</strong>758 - 825 kg</li>
+                        </ul>
+                    </div>
             </div>
         </section>
     </main>
